--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     ],
     "paths": {
       "@features/*": ["./src/app/ui/*"],
-      "@core/*": ["./src/app/core/*"]
+      "@core/*": ["./src/app/core/*"],
+      "@compose-ui/*": ["./src/app/core/components/*"]
     }
   },
   "angularCompilerOptions": {
