--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@features/*": ["./src/app/ui/*"],
       "@core/*": ["./src/app/core/*"],
-      "@compose-ui/*": ["./src/app/core/components/*"]
+      "@compose-ui/*": ["./src/app/core/components/*"],
+      "@user-core/*": ["./src/app/ui/user/- core/*"]
     }
   },
   "angularCompilerOptions": {
