--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
       "dom"
     ],
     "paths": {
-      "@features/*": ["./src/app/ui/*"],
-      "@core/*": ["./src/app/core/*"],
-      "@compose-ui/*": ["./src/app/core/components/*"],
-      "@user-core/*": ["./src/app/ui/user/core/*"]
+      "@features/*": ["./src/app/features/*"],
+      "@domain/*": ["./src/app/domain/*"],
+      "@shell/*": ["./src/app/shell/*"],
+      "@compose-ui/*": ["./src/app/libs/compose-ui/*"],
     }
   },
   "angularCompilerOptions": {
