--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@zxing/library": "^0.21.3",
     "@zxing/ngx-scanner": "^18.0.1",
     "firebase-tools": "^13.13.2",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
