--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase-tools": "^13.13.2",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^12.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
